ecmascript/parser/tests/test262-error-references/fail/95c10472e36270b6.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/95c10472e36270b6.js:1:9
  |
1 | (a,...a)
  |         ^

